test/parsing/vass/ref-keyword-2.good
ref-keyword-2.chpl:2: syntax error: near 'ref'
